Bugfix with alignment

--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ body {
 	background: #f7cf89;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
 a {
